# yandex-practicum-blog

./: .env  .gitignore  Cargo.toml  README.md  api.http
.github/workflows/: ci.yml
.sqlx/: query-10f011fe7962d1f17f29f6996f3b72a5c9c564a5fb04a93286ea7ab271184948.json  query-3a80377b3e647a69996eecf65c01fc7e594ed4e0605cd3e49da39f3c750c7f0a.json  query-606364c79e0990deb07dfbe6c32b3d302d083ec5333f3a5ce04113c38a041100.json  query-9dd13cfdc715dd86f6051f8cc51681f1846b2f350305acda8d8807ef28976268.json  query-aa7cf0efcf0783a02a7caf5eace64691acc716476fe5166725d0be3d0b3b6b1f.json  query-ada4bf21a0317df0512367acfe2799e6e060ddca1b05f3b7543cdc65e5785bab.json  query-b0f794f4f31317d413407c05b8b339cc05c062ed20603ea861cc556446345e4d.json  query-b6019471ff1989ef2f0658b0b34e683fdc706751e2bb69043544c9a4d08b5ba0.json
blog-cli/: Cargo.toml  README.md
blog-cli/src/: args.rs  main.rs
blog-client/: Cargo.toml  README.md  build.rs
blog-client/src/: blog_client.rs  errors.rs  grpc_client.rs  http_client.rs  lib.rs
blog-client/src/blog_client/: client.rs
blog-client/src/proto/: blog.proto
blog-server/: Cargo.toml  README.md  build.rs
blog-server/src/: api.rs  application.rs  configuration.rs  domain.rs  infrastructure.rs  main.rs  server.rs
blog-server/src/api/: errors.rs  extractors.rs  grpc.rs  grpc_handlers.rs
blog-server/src/api/extractors/: authenticated_user.rs
blog-server/src/api/grpc/: commands.rs  errors.rs  grpc_handlers.rs  results.rs
blog-server/src/api/grpc/grpc_handlers/: blog_service.rs
blog-server/src/api/grpc_handlers/: blog_service.rs
blog-server/src/api/http/: http_handlers.rs
blog-server/src/api/http/http_handlers/: auth.rs
blog-server/src/api/http/http_handlers/auth/: login.rs  register.rs
blog-server/src/api/http/http_handlers/posts/: create_post.rs  delete_post.rs  get_post.rs  get_post_list.rs  update_post.rs
blog-server/src/api/http/middleware/: auth.rs
blog-server/src/api/http_handlers/: auth.rs  posts.rs
blog-server/src/api/http_handlers/auth/: login.rs  register.rs
blog-server/src/api/http_handlers/posts/: create_post.rs  delete_post.rs  get_post.rs  get_post_list.rs  response.rs  update_post.rs
blog-server/src/api/middleware/: auth.rs  jwt.rs
blog-server/src/application/: auth.rs  blog.rs  contracts.rs
blog-server/src/application/auth/: calculate_password_hash.rs  password.rs  register_user_handler.rs  verify_user_handler.rs
blog-server/src/application/blog/: create_post_handler.rs  delete_post_handler.rs  get_post_handler.rs  get_post_list_handler.rs  update_post_handler.rs
blog-server/src/application/contracts/: post_repository.rs  user_repository.rs
blog-server/src/domain/: entities.rs  value_objects.rs
blog-server/src/domain/entities/: blog.rs  post.rs  user.rs
blog-server/src/domain/value_objects/: content.rs  date_time.rs  email.rs  identification.rs  password.rs  password_hash.rs  title.rs  user_name.rs
blog-server/src/infrastructure/: dal.rs  jwt.rs  tracing.rs
blog-server/src/infrastructure/dal/: postgres_post_repository.rs  postgres_user_repository.rs
blog-wasm/: Cargo.toml  README.md  index.html
blog-wasm/src/: components.rs  main.rs  route.rs  token_storage.rs
blog-wasm/src/components/: add_post.rs  edit_post.rs  error.rs  home.rs  login.rs  post_detail.rs  posts_list.rs  register.rs
config/: base.yaml
migrations/: 20260127131358_create_users.sql  20260129181014_create_posts.sql
scripts/: init_db.sh
