[workspace]
resolver = "2"
members = ["blog-cli","blog-client","blog-server"]

[workspace.dependencies]
secrecy = { version = "0.10", features = ["serde"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
tonic = "0.14"
prost = "0.14"
tonic-prost = "0.14"
prost-types = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
