[package]
name = "blog-client"
version = "0.1.0"
edition = "2024"

[dependencies]
secrecy = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.13", features = ["json"] }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
serde = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tonic-prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
tonic-prost-build = "0.14"
