[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
anyhow = "1"
serde = { version = "1", features = ["derive"]}
config = "0.15"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json", "chrono"] }
secrecy = { version = "0.10", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
thiserror = "2"
regex = "1"
