[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
anyhow = "1"
serde = { workspace = true }
config = "0.15"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json", "chrono"] }
secrecy = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
regex = "1"
argon2 = { version = "0.5", features = ["std"] }
rand_core = "0.9"
async-trait = { workspace = true }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
html-escape = "0.2"
tonic = { workspace = true }
prost = { workspace = true }
tonic-prost = { workspace = true }
prost-types = { workspace = true }
tonic-reflection = "0.14"
tower-http = { version = "0.6", features = ["trace"] }
actix-cors = "0.7"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[build-dependencies]
tonic-prost-build = "0.14"
