[package]
name = "blog-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew/" }
gloo-net = "0.6"
gloo-storage = "0.3"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
serde = { workspace = true }
wasm-bindgen-futures = "0.4"
log = "0.4"
wasm-logger = "0.2"
